@@ -734,6 +734,9 @@ Release 0.18.0 - Unreleased
 
     HADOOP-3691. Fix streaming and tutorial docs. (Jothi Padmanabhan via ddas)
 
+    HADOOP-3630. Fix NullPointerException in CompositeRecordReader from empty
+    sources (cdouglas)
+
 Release 0.17.2 - Unreleased
 
   BUG FIXES
